# OfflineRayTracer

./: README.md  Skybox.txt
RayTracer/: CMakeLists.txt  Camera.cpp  Camera.h  Color.h  Ellipsoid.cpp  Ellipsoid.h  Light.h  Material.h  Ray.h  RayCollision.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  Shape.h  Sphere.cpp  Sphere.h  SpotLight.h  Texture.h  Triangle.cpp  Triangle.h  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
